Update JWTVotesEndpoint.java